--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "AGPL-3.0-only",
     "autoload": {
         "psr-4": {
-            "Mateffy\\Magic\\Chat\\": "src/Chat/"
+            "Mateffy\\Magic\\": "src/"
         }
     },
     "authors": [
