--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     "require": {
         "illuminate/collections": "*",
         "livewire/livewire": "^3.5",
-        "mateffy/llm-magic": "0.0.*"
+        "mateffy/llm-magic": "dev-main"
     },
     "prefer-stable": true,
     "__repositories": [
